# cloud-native-agents

./: .gitignore  Containerfile  README.md  main.py
UI/: .eslintrc.json  Containerfile  README.md  entrypoint.sh  index.html  package.json  tailwind.config.js  vite-env.d.ts
UI/components/: Spinner.tsx
UI/config/: config.ts
UI/hooks/: useWebSocket.ts
UI/public/: config.js
backend/: .env.example  agents.py  main.py  requirements.txt
backend/api/: main.py
backend/core/: README.md  agents.py  inspectmemory.py  utils.py
backend/grpc/: agents.proto  agents_pb2_grpc.py  client_and_tool.py  test_client.py  test_tool.py
backend/grpc_proto/: agents_pb2.py
demos/dynamic_discovery_with_agent_cards/: main.py  pyproject.toml
demos/dynamic_discovery_with_agent_cards/agents/status_assistant/: agent.py
demos/dynamic_discovery_with_agent_cards/agents/status_assistant/data/: status.txt
demos/dynamic_discovery_with_agent_cards/bridge/: README.md
demos/dynamic_discovery_with_agent_cards/scripts/: test-agent-endpoints.sh
demos/github_review_agent/: README.md
demos/github_review_agent/kafka/: .env.example  issue_reader_agent.py  kafka_producer.py  kafka_topics.sh  launch_kafka_container.py  launch_kafka_system.py  monitor_consumer.py  pyproject.toml  reasoner_agent.py  researcher_agent.py  ui_consumer.py
demos/github_review_agent/kafka/openshift/: configmap.yaml  topic.yaml
demos/status_update_agent_with_dynamic_discovery/: README.md  notes  pyproject.toml
docs/: MEMORY_USAGE.md
kafka/: README.md  commenter_agent.py  requirements.txt  streamlit_kafka_ui.py
(+49 files in other folders)
