[project]
name = "kafka-multi-agent-system"
version = "0.1.0"
description = "A distributed multi-agent system using Kafka for GitHub issue analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.9.0",
    "autogen-ext[mcp]>=0.1.0",
    "autogen-agentchat>=0.2.0",
    "autogen-core>=0.4.2",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "asyncio-mqtt>=0.16.0",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "streamlit",
    "pandas>=2.0.0",
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 